# Scheduler-Agent

./: .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE.md  MCP.txt  README.md  README_en.md  alembic.ini  app.py  asgi.py  docker-compose.yml  llm_client.py  main.py  mcp_server.py  model_selection.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scheduler-agent.conf  scheduler_tools.py  secrets.env.example  setting.txt  spec.md  task.md  test_seed.py  tsconfig.json  view_prompt.txt  vite.config.js
.github/workflows/: syntax-check.yml  tests.yml
frontend/: index.html
frontend/src/: main.jsx  main.tsx
instance/: scheduler.db
migrations/: env.py
migrations/versions/: 20260225_000001_initial_schema.py  20260324_000002_add_llm_monthly_usage.py  20260324_000003_add_guest_isolation_columns.py
scheduler_agent/: __init__.py  application.py  asgi.py
scripts/: migrate_sqlite_to_postgres.py  up.sh
static/: evaluation.js  scheduler.js  style.css
templates/: agent_day.html  agent_result.html  calendar_partial.html  day.html  embed_calendar.html  evaluation.html  index.html  layout.html  log_partial.html  routines.html  spa.html  timeline_partial.html
tests/: conftest.py  test_agent_result.py  test_app.py  test_architecture_imports.py  test_basic_api.py  test_ci_action_service_validation.py  test_ci_config_and_templates.py  test_ci_handlers_unit.py  test_ci_llm_client_helpers.py  test_ci_model_selection_helpers.py  test_ci_postgres_smoke.py  test_ci_smoke.py  test_ci_usage_limit_service.py  test_frontend_react.py  test_major_endpoints.py
(+50 files in other folders)
